# oracle

./: README.md  index.html  oracle.py  oracle_styles.css  pyproject.toml  requirements.txt
backend/: __init__.py  model_factory.py  models.py  nodes.py  oracle.py  users.py
backend/model_interfaces/: __init__.py  chat_ollama.py
frontend/: index.html  oracle.js  oracle_styles.css
